--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -49,7 +49,7 @@
 %% main section %%
 %%%%%%%%%%%%%%%%%%
 \begin{flushleft}
-  \begin{outline}%[compactitem]
+  \begin{outline}[compactitem]
 
     %%%%%%%%%%%%%%%%%%%%
     %% spacing config %%
@@ -97,12 +97,20 @@
     Computer hardware servicing
     \hfill\hfill
     \zzz{Projects:}
-    \1 CSCE 121:  (Team of 4) \hfill Fall 2015 
-    \\ Designed and programmed a clone of Boggle in C++ using the FLTK graphics library. Included custom level sizes and persistent highscores
-    \1 ENGR 112: (Team of 16) \hfill Spring 2015
-    \\ Built a machine to read an input barcode and dispense the corresponding pellets autonomously 
-    \1 ENGR 111: (Team of 4) \hfill Fall 2014
-    \\ Built an autonomous robot to navigate a field with obstacles and perform tasks
+      \1 \textbf{Database} (team of 3) \hfill Spring 2017
+      \\ Designed and programmed a basic implementation of a SQL-like database back-end, as well as a corresponding front-end, both in C++.
+      \1 \textbf{Memory Allocator} (team of 2) \hfill Spring 2017
+      \\ Designed and implemented a buddy-system memory allocation system in C++.
+      \1 \textbf{Interpreter} \hfill Fall 2016
+      \\ Implemented an interpreter for a given programming language specification and grammar in Haskell.
+      \1 \textbf{Hardware Computer} \hfill Summer 2016
+      \\ Designed and assembled a basic Von Neumann machine using a Hardware Description Language.
+      \1 \textbf{Boggle Clone} \hfill Fall 2015
+      \\ Designed and programmed a clone of Boggle in C++ using the FLTK graphics library. Included custom level sizes and persistent highscores.
+      \1 \textbf{Pellet Dispenser} \hfill Spring 2015
+      \\ Built a machine to read an input barcode and dispense the corresponding pellets.
+      \1 \textbf{Autonomous Robot} \hfill Fall 2014
+      \\ Built an autonomous robot to navigate a field with obstacles and perform various tasks.
 
     \zzz{Work Experience:}
     \1 \textbf{Teacher Retirement System of Texas, Austin, TX} \hfill Summer 2015
