Split line for Tech Skills

--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -12,7 +12,7 @@
 \usepackage{outlines} % for outline
 \usepackage{paralist} % for compactitem (compact itemize)
 \usepackage{multicol} % for multicolumn layout
-\geometry{letterpaper, margin=0.5in, top=0.5in}
+\geometry{letterpaper, margin=0.45in, top=0.5in}
 
 
 \begin{document}
@@ -93,7 +93,8 @@
     \vspace{-5px}\upspace
     \1 
     Windows, Linux
-    \hfill\labelitemi\hspace{1px}
+    %\hfill\labelitemi\hspace{1px}
+      \1
     Computer hardware servicing
     \hfill\hfill
     \zzz{Projects:}
