--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -26,7 +26,7 @@
   \begin{flushleft}
     corder@tamu.edu\\
     (512) 994 8895\\
-    \verb|jcguy.github.io|
+    \verb|corder.tech|
   \end{flushleft}
 \end{minipage}
 \hfill
@@ -72,13 +72,13 @@
 
 
     \zzz{Objective:}
-    \1 Seeking summer 2017 internship in Software Engineering, with particular interest in back-end development.
+    \1 Seeking Summer 2018 internship in Software Engineering, with particular interest in back-end development.
 
     \zzz{Education:}
     \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - December 2018
-    \\ \textbf{Computer Science}, Bachelor of Science; Cybersecurity minor
-    \\ Graduation: \textbf{December 2018}
-    \\ GPA:  \textbf{3.2}/4.0
+    \\ \textbf{Computer Science}, Bachelor of Science
+    \\ Expected Graduation: \textbf{December 2018}
+    \\ GPA:  \textbf{3.3}/4.0
     % \1 High School: \hfill Graduated May 2014
     %   \2 \textbf{Home school}, GPA: \textbf{4.0}/4.0, including \textbf{Dual Credit} and \textbf{AP}
 
@@ -87,8 +87,8 @@
     \\
     \vspace{-\baselineskip}\vspace{-\upspacelength}
     \begin{tabularx}{\textwidth}{X X X X X X}
-      & C++   & Python & Java\upspace \\
-      & MATLAB& LaTeX & Git\upspace \\
+      & Python   & C++ & C\#\upspace \\
+      & MATLAB & \LaTeX & Git\upspace \\
     \end{tabularx}
     \vspace{-5px}\upspace
     \1 
@@ -98,27 +98,24 @@
     Computer hardware servicing
     \hfill\hfill
     \zzz{Projects:}
+      \1 \textbf{Bus Route Webapp} (team of 3) \hfill Spring 2017
+      \\ Designed and programmed the back-end of a webapp that interacted with Texas A\&M's transportation API and mapped bus routes and locations onto Google Maps, using Typescript/Javascript.
       \1 \textbf{Database} (team of 3) \hfill Spring 2017
-      \\ Designed and programmed a basic implementation of a SQL-like database back-end, as well as a corresponding front-end, both in C++.
+      \\ Designed and programmed a basic implementation of a SQL-like database back-end and corresponding front-end in C++.
       \1 \textbf{Memory Allocator} (team of 2) \hfill Spring 2017
-      \\ Designed and implemented a buddy-system memory allocation system in C++.
-      \1 \textbf{Interpreter} \hfill Fall 2016
-      \\ Implemented an interpreter for a given programming language specification and grammar in Haskell.
-      \1 \textbf{Hardware Computer} \hfill Summer 2016
-      \\ Designed and assembled a basic Von Neumann machine using a Hardware Description Language.
-      \1 \textbf{Boggle Clone} \hfill Fall 2015
-      \\ Designed and programmed a clone of Boggle in C++ using the FLTK graphics library. Included custom level sizes and persistent highscores.
-      \1 \textbf{Pellet Dispenser} \hfill Spring 2015
-      \\ Built a machine to read an input barcode and dispense the corresponding pellets.
-      \1 \textbf{Autonomous Robot} \hfill Fall 2014
-      \\ Built an autonomous robot to navigate a field with obstacles and perform various tasks.
+      \\ Designed and implemented a buddy-system memory allocator in C++.
+      \1 \textbf{Asunder, 2D Video Game} (team of 4) \hfill Fall 2016
+      \\ Programmed and helped design a video game for the Chillenium 48-hour game jam, using C\# and the Unity game engine.
 
     \zzz{Work Experience:}
+    \1 \textbf{Texas A\&M Live Lab} \hfill Summer 2017
+    \\ \textbf{Student Developer}
+    \\ Worked on the video game \textit{Variant: Prime}, an edutainment calculus game by Triseum. Responsibilities included implementation of an interactive mathematics manipulation environment using C\# and the Unity game engine, as well as development of tools as requested by other teams on the project.
     \1 \textbf{Teacher Retirement System of Texas, Austin, TX} \hfill Summer 2015
     \\ \textbf{Technical Support Intern}
-    \\ Helped employees with computer- and network-related issues
-    \\ Prepared and deployed workstations for new and existing employees
-    \\ Monitored ongoing computer operations and alerted appropriate staff of problems
+    \\ Helped employees with computer- and network-related issues.
+    \\ Prepared and deployed workstations for new and existing employees.
+    \\ Monitored ongoing computer operations and alerted appropriate staff of problems.
 
     \zzz{Honors:}
     \1 \textbf{TAMU Engineering Honors}
@@ -138,9 +135,7 @@
     %%TAMU CSE Honors
 
     \zzz{Notable Awards:}
-    \1 \textbf{Eagle Scout} project: educational garden outline ecological regions of Texas \hfill November 2013
-    \1 AWANA Games: 1\textsuperscript{st} place region-wide \hfill 2013
-    \1 FIRST Robotics Competition: 1\textsuperscript{st} place state-wide \hfill 2008 \hfill
+    \1 \textbf{Eagle Scout} project: educational garden outlining ecological regions of Texas \hfill November 2013
     % trailing hfill because otherwise it is too far to the right for no easily discernable reason
 
   \end{outline}
