Remove unneeded build tools

--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -12,7 +12,7 @@
 \usepackage{outlines} % for outline
 \usepackage{paralist} % for compactitem (compact itemize)
 \usepackage{multicol} % for multicolumn layout
-\geometry{letterpaper, margin=0.45in, top=0.5in}
+\geometry{letterpaper, margin=0.75in, top=0.75in}
 
 
 \begin{document}
@@ -71,14 +71,14 @@
     \renewcommand{\4}{\upspace \oldFour }
 
 
-    \zzz{Objective:}
-    \1 Seeking Summer 2018 internship in Software Engineering, with particular interest in back-end development.
+    % \zzz{Objective:}
+    % \1 Seeking Summer 2018 internship in Software Engineering, with particular interest in back-end development.
 
     \zzz{Education:}
-    \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - December 2018
+    \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - Present
     \\ \textbf{Computer Science}, Bachelor of Science
-    \\ Expected Graduation: \textbf{December 2018}
-    \\ GPA:  \textbf{3.3}/4.0
+    \\ Expected Graduation: \textbf{May 2019}
+    \\ GPA:  \textbf{3.4}/4.0
     % \1 High School: \hfill Graduated May 2014
     %   \2 \textbf{Home school}, GPA: \textbf{4.0}/4.0, including \textbf{Dual Credit} and \textbf{AP}
 
@@ -92,7 +92,7 @@
     \end{tabularx}
     \vspace{-5px}\upspace
     \1 
-    Windows, Linux
+    Linux, Windows
     %\hfill\labelitemi\hspace{1px}
       \1
     Computer hardware servicing
@@ -104,7 +104,7 @@
       \\ Designed and programmed a basic implementation of a SQL-like database back-end and corresponding front-end in C++.
       \1 \textbf{Memory Allocator} (team of 2) \hfill Spring 2017
       \\ Designed and implemented a buddy-system memory allocator in C++.
-      \1 \textbf{Asunder, 2D Video Game} (team of 4) \hfill Fall 2016
+      \1 \textbf{\textit{Asunder}, 2D Video Game} (team of 4) \hfill Fall 2016
       \\ Programmed and helped design a video game for the Chillenium 48-hour game jam, using C\# and the Unity game engine.
 
     \zzz{Work Experience:}
