--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -26,7 +26,6 @@
   \begin{flushleft}
     corder@tamu.edu\\
     (512) 994 8895\\
-    \verb|corder.tech|
   \end{flushleft}
 \end{minipage}
 \hfill
@@ -38,8 +37,7 @@
 \hfill
 \begin{minipage}{0.3\linewidth}
   \begin{flushright}
-    4341 FM 535 \\
-    Bastrop, TX 78602 \\
+    \verb|corder.tech|
   \end{flushright}
 \end{minipage}
 
@@ -135,7 +133,7 @@
     %%TAMU CSE Honors
 
     \zzz{Notable Awards:}
-    \1 \textbf{Eagle Scout} project: educational garden outlining ecological regions of Texas \hfill November 2013
+    \1 \textbf{Eagle Scout} project: educational garden outlining ecological regions of Texas \hfill Fall 2013
     % trailing hfill because otherwise it is too far to the right for no easily discernable reason
 
   \end{outline}
