Update with graduation

--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -5,7 +5,6 @@
 \documentclass[12pt]{article}
 
 \usepackage{verbatim}
-\usepackage{fontawesome}
 \usepackage{ragged2e}
 \usepackage{geometry}
 \usepackage{setspace}
@@ -17,8 +16,8 @@
 
 
 \begin{document}
-\pagenumbering{gobble}
 
+\pagenumbering{gobble}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 3-column header with title %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -26,8 +25,8 @@
 \begin{minipage}{0.3\linewidth}
     \begin{flushleft}
         \begin{tabular}{l l}
-            \faicon{link} & \verb|corder.tech| \\
-            \faicon{key} & \verb|keybase.io/corder|
+            \verb|corder.tech| \\
+            \verb|keybase.io/corder|
         \end{tabular}
     \end{flushleft}
 \end{minipage}
@@ -41,8 +40,8 @@
 \begin{minipage}{0.3\linewidth}
     \begin{flushright}
         \begin{tabular}{r l}
-            \verb|corder@tamu.edu| & \faicon{envelope-square} \\
-            \verb|512 994 8895| & \faicon{phone-square}
+            \verb|corder@tamu.edu| \\
+            \verb|512 994 8895|
         \end{tabular}
     \end{flushright}
 \end{minipage}
@@ -74,10 +73,10 @@
         % \1 Seeking Summer 2018 internship in Software Engineering, with particular interest in back-end development.
 
         \zzz{Education:}
-        \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - Present
+        \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - May 2019
         \\ \textbf{Computer Science}, Bachelor of Science
         \\ \textbf{Cybersecurity}, Minor
-        \\ Expected Graduation: \textbf{May 2019}
+        \\ \textbf{Mathematics}, Minor
         \\ GPA\@:  \textbf{3.4}/4.0
 
         \vspace{.25em}
