--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -12,7 +12,7 @@
 \usepackage{outlines} % for outline
 \usepackage{paralist} % for compactitem (compact itemize)
 \usepackage{multicol} % for multicolumn layout
-\geometry{letterpaper, margin=0.75in, top=0.5in}
+\geometry{letterpaper, margin=1in, top=0.75in}
 
 
 \begin{document}
@@ -22,31 +22,30 @@
 %% 3-column header with title %%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \noindent
-\begin{minipage}{0.3\linewidth}
+\begin{minipage}{0.25\linewidth}
     \begin{flushleft}
         \begin{tabular}{l l}
-            \verb|corder.tech| \\
-            \verb|keybase.io/corder|
+            \verb|corder.guy@gmail.com| \\
         \end{tabular}
     \end{flushleft}
 \end{minipage}
 \hfill
-\begin{minipage}{0.3\linewidth}
+\begin{minipage}{0.45\linewidth}
     \begin{center}
         {\Huge\textbf{Corder Guy}}
     \end{center}
 \end{minipage}
 \hfill
-\begin{minipage}{0.3\linewidth}
+\begin{minipage}{0.25\linewidth}
     \begin{flushright}
         \begin{tabular}{r l}
-            \verb|corder@tamu.edu| \\
-            \verb|512 994 8895|
+          \verb|512 994 8895| \\
+          \verb|Houston, TX, USA|
         \end{tabular}
     \end{flushright}
 \end{minipage}
 
-%%\vspace{-4px}
+\vspace{0.25in}
 
 %%%%%%%%%%%%%%%%%%
 %% main section %%
@@ -62,66 +61,60 @@
         \newcommand{\upspace}{\vspace{\upspacelength}}
         % section titles
         \newcommand{\zzz}[1]{\upspace \0 \textbf{#1} \\ \vspace{-0.8\baselineskip} \hrulefill \vspace{-2px} \\ }
-        \let\oldOne\1\let\oldTwo\2\let\oldThree\3\let\oldFour\4
-        \renewcommand{\1}{\upspace \oldOne  }
-        \renewcommand{\2}{\upspace \oldTwo  }
-        \renewcommand{\3}{\upspace \oldThree}
-        \renewcommand{\4}{\upspace \oldFour }
+        % \let\oldOne\1\let\oldTwo\2\let\oldThree\3\let\oldFour\4
+        % \renewcommand{\1}{\upspace \oldOne  }
+        % \renewcommand{\2}{\upspace \oldTwo  }
+        % \renewcommand{\3}{\upspace \oldThree}
+        % \renewcommand{\4}{\upspace \oldFour }
 
+        \zzz{Work Experience}
+        \vspace{0.25em}
+          \1 \textbf{Software Engineer, Two Sigma} \hfill August 2019 - Nov 2024
 
-        % \zzz{Objective:}
-        % \1 Seeking Summer 2018 internship in Software Engineering, with particular interest in back-end development.
+          \vspace{0.25em}\textbf{Technical Lead} for OnCall Service, a translation layer between a vendor alerting product and internal infrastructure.
+          Functionality included a REST API, complex caching requirements, Slack integration, error handling, scalability, and reliability.
+          Drove the product from its origin as an intern project to a key component of several critical systems, with 200+ unique users internally.
 
-        \zzz{Education:}
+          \vspace{0.25em}\textbf{Individual Contributor} on a top-priority crossteam initiative to restructure release path controls.
+          Led integration with existing legacy workflows across multiple teams:
+          gathering requirements, understanding technical problems, learning new tools and API frameworks.
+          Drove implementation of new microservice to monitor Jira queues and ensure accountability and approval for production-critical releases.
+
+          \vspace{0.25em}\textbf{Individual Contributor} on a crossteam pilot of Web Components technology.
+          Worked with two other teams to rewrite existing web UIs to reduce code size, duplication, and technical debt by an estimated 70\%.
+
+          \vspace{0.25em}\textbf{Intern Manager and Buddy} for three interns, providing guidance, mentoring, and technical coaching for the duration of the internships.
+
+          \vspace{0.25em}\textbf{Interviewer} for internship and full-time candidates.
+          Administered one-hour technical interviews and delivered detailed feedback for 50+ applicants.
+
+          \vspace{0.25em}\textbf{Instructor} for multiple ``Hacker Lab'' courses, including amateur radio, soldering, and 3D printing.
+
+        \vspace{.25em}
+        \zzz{Technical Expertise}
+          \vspace{.25em}
+          \hspace{0.05\textwidth}\begin{tabularx}{0.9\textwidth}{X X X X X X}
+            Java   & Python      & TypeScript  & Angular \\
+            Flask  & Marshmellow & CI/CD       & Unit Testing \\
+            Linux  & \verb|git|  & REST APIs  & Web Components \\
+          \end{tabularx}
+          \vspace{.25em}
+
+        \vspace{.25em}
+        \zzz{Technical Experience}
+          \vspace{.25em}
+          \hspace{0.05\textwidth}\begin{tabularx}{0.9\textwidth}{X X X X X X}
+            Windows  & Common Lisp  & JavaScript  & Ansible \\
+            \verb|vim| & \verb|emacs| & Code Generation & Jira \\
+            C & C++ & Rust
+          \end{tabularx}
+          \vspace{.25em}
+
+        \zzz{Education}
         \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - May 2019
         \\ \textbf{Computer Science}, Bachelor of Science
         \\ \textbf{Cybersecurity}, Minor
         \\ \textbf{Mathematics}, Minor
-        \\ GPA\@:  \textbf{3.4}/4.0
-
-        \vspace{.25em}
-        \zzz{Technical Skills:}
-        \1 Programming and software:
-        \\ \vspace{.2em}
-        \begin{tabularx}{\textwidth}{X X X X X X}
-            & Python   & C++ & \LaTeX & \verb|git|\upspace \\
-            & Linux & Windows & \verb|vim| & \verb|gdb|\upspace \\
-        \end{tabularx}
-        \vspace{-.5em}
-        \1 Computer hardware and software support
-        \hfill\hfill
-        \vspace{.25em}
-        \zzz{Projects:}
-        \1 \textbf{Mobile App} \hfill Spring 2018
-        \\ Designed and programmed the back-end of a mobile app that provided a competitive multi-player exercise plan, using \verb|httpd|, Python, and SQLite.
-        \1 \textbf{Software Rasterizer} \hfill Spring 2018
-        \\ Created a program in C++ that read a 3D model file and rendered it to a 2D image, using an orthographic projection and z-buffering.
-        \1 \textbf{Bus Route Webapp} (team of 3) \hfill Spring 2017
-        \\ Designed and programmed the back-end of a webapp that interacted with Texas A\&M's transportation API and mapped bus routes onto Google Maps, using Typescript.
-        \1 \textbf{Database} (team of 3) \hfill Spring 2017
-        \\ Designed and programmed an SQL-like database in C++ in tandem with another team of students. Each team developed and documented a back-end, then swapped to create a front-end for the other team's back-end.
-
-        \vspace{.25em}
-        \zzz{Work Experience:}
-        \1 \textbf{Texas A\&M Live Lab} \hfill Summer 2017
-        \\ \textbf{Student Developer}
-        \\ Worked on the video game \textit{Variant: Prime}, an edutainment calculus game by Triseum. Responsibilities included implementation of an interactive mathematics manipulation environment using C\# and the Unity game engine.
-        \1 \textbf{Teacher Retirement System of Texas, Austin, TX} \hfill Summer 2015
-        \\ \textbf{Technical Support Intern}
-        \\ Helped employees with computer- and network-related issues. Responsibilities included preparing and deploying workstations for new and existing employees, as well as monitoring ongoing computer operations and alerting appropriate staff of problems.
-
-        \vspace{.25em}
-        \zzz{Honors:}
-        \1 \textbf{TAMU Engineering Honors}
-        \1 Recipient of 4 scholarships funding 70\% of tuition:
-        \2 National Merit Scholar Recognition Scholarship
-        \2 National Merit Scholarship
-        \2 President's Endowed Scholarship
-        \2 TAMU CSCE Industrial Affiliate Program Scholarship
-        \vspace{.25em}
-        \zzz{Notable Awards:}
-        \1 \textbf{Eagle Scout} Project: educational garden outlining ecological regions of Texas. \hfill Fall 2013
-
     \end{outline}
 \end{flushleft}
 \end{document}
