Added suggestions from James

--- a/Corder_Guy_Resume.tex
+++ b/Corder_Guy_Resume.tex
@@ -73,20 +73,27 @@
 
           \vspace{0.25em}\textbf{Technical Lead} for OnCall Service, a translation layer between a vendor alerting product and internal infrastructure.
           Functionality included a REST API, complex caching requirements, Slack integration, error handling, scalability, and reliability.
-          Drove the product from its origin as an intern project to a key component of several critical systems, with 200+ unique users internally.
+          \begin{itemize}
+            \item Drove the product from its origin as an intern project to a key component of several critical systems, with 200+ unique users internally.
+            \item Complemented by manager for my ability to quickly identify and resolve complex issues with excellent user service.
+            \item Wrote and maintained the primary backend in Java using Dropwizard and Google Guava, with extensive integration testing through our CI/CD service.
+            \item Recognized by manager by consistently receiving above-average discretionary performance bonuses.
+          \end{itemize}
 
           \vspace{0.25em}\textbf{Individual Contributor} on a top-priority crossteam initiative to restructure release path controls.
-          Led integration with existing legacy workflows across multiple teams:
-          gathering requirements, understanding technical problems, learning new tools and API frameworks.
-          Drove implementation of new microservice to monitor Jira queues and ensure accountability and approval for production-critical releases.
+          \begin{itemize}
+            \item Led integration with existing legacy workflows across multiple teams: gathering requirements, understanding technical problems, learning new tools and API frameworks.
+            \item Drove implementation of new microservice to monitor Jira queues and ensure accountability and approval for production-critical releases.
+          \end{itemize}
 
           \vspace{0.25em}\textbf{Individual Contributor} on a crossteam pilot of Web Components technology.
           Worked with two other teams to rewrite existing web UIs to reduce code size, duplication, and technical debt by an estimated 70\%.
 
-          \vspace{0.25em}\textbf{Intern Manager and Buddy} for three interns, providing guidance, mentoring, and technical coaching for the duration of the internships.
+          \vspace{0.25em}\textbf{Intern Manager and Buddy}
+          Selected by manager to provide guidance, mentoring, and technical coaching for three interns.
 
-          \vspace{0.25em}\textbf{Interviewer} for internship and full-time candidates.
-          Administered one-hour technical interviews and delivered detailed feedback for 50+ applicants.
+          \vspace{0.25em}\textbf{Interviewer}
+          Trusted and relied upon to administer one-hour technical interviews and deliver detailed feedback for more than 50 applicants for internship and full-time positions.
 
           \vspace{0.25em}\textbf{Instructor} for multiple ``Hacker Lab'' courses, including amateur radio, soldering, and 3D printing.
 
@@ -111,7 +118,7 @@
           \vspace{.25em}
 
         \zzz{Education}
-        \1 \textbf{Texas A\&M University}, College Station, TX \hfill Fall 2014 - May 2019
+        \1 \textbf{Texas A\&M University}, College Station, TX \hfill September 2014 - May 2019
         \\ \textbf{Computer Science}, Bachelor of Science
         \\ \textbf{Cybersecurity}, Minor
         \\ \textbf{Mathematics}, Minor
